- Fixed data visibility based on log in auth

--- a/src/core/Patient/index.css
+++ b/src/core/Patient/index.css
@@ -2,7 +2,7 @@
 
 /*  */
 .desktop-patient-component {
-    display: none;
+    display: block;
 }
 .action-btns-container {
     display: flex;
